--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,7 +19,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    environment: approval
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Set up Python
