--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -4,6 +4,12 @@ name: CI
 
 # Controls when the workflow will run
 on:
+  workflow_call:
+    secrets:
+      ssh-pk:
+        #default: ${{ RICK_PRIVATE_KEY }}
+        required: true
+
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
@@ -22,6 +28,12 @@ jobs:
     environment: approval
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: Checkout Repository k8cloudserver
+        uses: actions/checkout@v3
+        with:
+          repository:  rhlwong/k8scloudserver 
+          path: k8cloudserver
+          
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -37,3 +49,17 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ansible
+          
+      - name: Setup SSH Keys and known_hosts
+        env:
+            SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+        run: |
+            mkdir -p /home/runner/.ssh
+            echo "${{ secrets.ssh-pk }}" > /home/runner/.ssh/rick-private
+            chmod 400 /home/runner/.ssh/rick-private
+            ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+            ssh-add /home/runner/.ssh/rick-private
+      - name: Run Ansible Deploy
+        run: ansible-playbook -i /home/runner/_work/k8scloudserver/inventory.yml --private-key /home/runner/.ssh/rick-private -u cloud_user /home/runner/_work/k8scloudserver/site.yml
+        env:
+          ANSIBLE_HOST_KEY_CHECKING: false  # Disable host key checking if necessary
